// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`script files named import definition resolution addon case default import from addon 1`] = `
Object {
  "addonsMeta": Array [
    Object {
      "name": "my-addon",
      "root": "node_modules/my-addon",
      "version": 1,
    },
  ],
  "registry": Object {
    "component": Object {
      "hello": Array [
        "app/components/hello/index.js",
      ],
    },
  },
  "response": Array [
    Object {
      "range": Object {
        "end": Object {
          "character": 14,
          "line": 1,
        },
        "start": Object {
          "character": 7,
          "line": 1,
        },
      },
      "uri": "/node_modules/my-addon/addon/utils/hello.js",
    },
  ],
}
`;

exports[`script files named import definition resolution addon case named import from addon 1`] = `
Object {
  "addonsMeta": Array [
    Object {
      "name": "my-addon",
      "root": "node_modules/my-addon",
      "version": 1,
    },
  ],
  "registry": Object {
    "component": Object {
      "hello": Array [
        "app/components/hello/index.js",
      ],
    },
  },
  "response": Array [
    Object {
      "range": Object {
        "end": Object {
          "character": 17,
          "line": 2,
        },
        "start": Object {
          "character": 13,
          "line": 2,
        },
      },
      "uri": "/node_modules/my-addon/addon/utils/hello.js",
    },
  ],
}
`;

exports[`script files named import definition resolution addon case not existing default import from addon 1`] = `
Object {
  "addonsMeta": Array [
    Object {
      "name": "my-addon",
      "root": "node_modules/my-addon",
      "version": 1,
    },
  ],
  "registry": Object {
    "component": Object {
      "hello": Array [
        "app/components/hello/index.js",
      ],
    },
  },
  "response": Array [
    Object {
      "range": Object {
        "end": Object {
          "character": 0,
          "line": 0,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
      "uri": "/node_modules/my-addon/addon/utils/hello.js",
    },
  ],
}
`;

exports[`script files named import definition resolution addon case unknown named import from addon 1`] = `
Object {
  "addonsMeta": Array [
    Object {
      "name": "my-addon",
      "root": "node_modules/my-addon",
      "version": 1,
    },
  ],
  "registry": Object {
    "component": Object {
      "hello": Array [
        "app/components/hello/index.js",
      ],
    },
  },
  "response": Array [
    Object {
      "range": Object {
        "end": Object {
          "character": 0,
          "line": 0,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
      "uri": "/node_modules/my-addon/addon/utils/hello.js",
    },
  ],
}
`;

exports[`template files yield positional path definition component definition as property path return component from property path 1`] = `
Object {
  "addonsMeta": Array [],
  "registry": Object {
    "component": Object {
      "bar": Array [
        "app/components/bar/index.hbs",
      ],
      "hello": Array [
        "app/components/hello/index.hbs",
      ],
      "my-component": Array [
        "app/components/my-component.hbs",
      ],
    },
  },
  "response": Array [
    Object {
      "range": Object {
        "end": Object {
          "character": 0,
          "line": 0,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
      "uri": "/app/components/bar/index.hbs",
    },
  ],
}
`;

exports[`template files yield positional path definition component definition as property path return component from property path for global scope override 1`] = `
Object {
  "addonsMeta": Array [],
  "registry": Object {
    "component": Object {
      "bar": Array [
        "app/components/bar/index.hbs",
      ],
      "hello": Array [
        "app/components/hello/index.hbs",
      ],
      "my-component": Array [
        "app/components/my-component.hbs",
      ],
    },
  },
  "response": Array [
    Object {
      "range": Object {
        "end": Object {
          "character": 0,
          "line": 0,
        },
        "start": Object {
          "character": 0,
          "line": 0,
        },
      },
      "uri": "/app/components/bar/index.hbs",
    },
  ],
}
`;
